--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -2,7 +2,7 @@
     <ul>
         <li>姓名</li>
     {% for n in name %}
-        <li><a href="/assets/{{ n.name }}">{{ n.name }}</a></li>
+        <li><a href="{% url 'assets:assets' n.name %}">{{ n.name }}</a></li>
     {% endfor %}
     </ul>
 
@@ -22,3 +22,23 @@
 {% else %}
     <p>No persons.</p>
 {% endif %}
+<br>
+<form action="{% url 'assets:add' %}" method="post">
+{% csrf_token %}
+姓名:<br>
+<input type="text" name="name">
+<br>
+部门:<br>
+<input type="text" name="department">
+<br>
+岗位:<br>
+<input type="text" name="job_position">
+<br>
+计算机类型:<br>
+<input type="text" name="pc_type">
+<br>
+SN码:<br>
+<input type="text" name="sn">
+<br>
+<input type="submit" value="Add">
+</form> 
