--- a/assets/templates/assets/add.html
+++ b/assets/templates/assets/add.html
@@ -1,5 +1,9 @@
-<form action="{% url 'assets:add' %}" method="post">
-姓名:<br>
+{% extends 'assets/base.html' %}
+{% load static %}
+
+{% block content %}
+
+<!-- 姓名:<br>
 <input type="text" name="name">
 <br>
 部门:<br>
@@ -14,5 +18,25 @@
 SN码:<br>
 <input type="text" name="sn">
 <br>
-<input type="submit" value="Add">
+<input type="submit" value="Add"> -->
+
+
+<form action="{% url 'assets:additem' %}" method="post">
+{% csrf_token %}
+<div class="form-group">
+    <label class="col-form-label" for="inputDefault">姓名</label>
+    <input type="text" class="form-control" placeholder="输入姓名" name="name">
+    <label class="col-form-label" for="inputDefault">部门</label>
+    <input type="text" class="form-control" placeholder="输入部门" name="department">
+    <label class="col-form-label" for="inputDefault">岗位</label>
+    <input type="text" class="form-control" placeholder="输入岗位" name="job_position">
+    <label class="col-form-label" for="inputDefault">计算机类型</label>
+    <input type="text" class="form-control" placeholder="输入计算机类型" name="pc_type">
+    <label class="col-form-label" for="inputDefault">SN码</label>
+    <input type="text" class="form-control" placeholder="输入SN码" name="sn">
+</div>
+<button type="submit" class="btn btn-primary btn-lg btn-block">提交</button>
 </form> 
+
+{% endblock %}
+  
