--- a/assets/templates/assets/index.html
+++ b/assets/templates/assets/index.html
@@ -1,44 +1,101 @@
-{% if name %}
+{% extends 'assets/base.html' %}
+{% load static %}
+<!-- <!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content=""><!doctype html>
+        <title>首页</title>
+            Bootstrap core CSS -->
+        <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    
+    </head> -->
+
+
+<!-- {% if name %}
     <ul>
         <li>姓名</li>
     {% for n in name %}
         <li><a href="{% url 'assets:assets' n.name %}">{{ n.name }}</a></li>
     {% endfor %}
-    </ul>
-
-    <!-- <ul>
-        <li>部门</li>
-    {% for n in name %}
-        <li>{{ n.department }}</li>
-    {% endfor %}
-    </ul>
-
-    <ul>
-        <li>岗位</li>
-    {% for n in name %}
-        <li>{{ n.job_position }}</li>
-    {% endfor %}
     </ul> -->
-{% else %}
-    <p>No persons.</p>
-{% endif %}
-<br>
-<form action="{% url 'assets:add' %}" method="post">
-{% csrf_token %}
-姓名:<br>
-<input type="text" name="name">
-<br>
-部门:<br>
-<input type="text" name="department">
-<br>
-岗位:<br>
-<input type="text" name="job_position">
-<br>
-计算机类型:<br>
-<input type="text" name="pc_type">
-<br>
-SN码:<br>
-<input type="text" name="sn">
-<br>
-<input type="submit" value="Add">
-</form> 
+<!-- {% endif %} -->
+
+{% block content %}
+
+
+    <table class="table table-hover">
+        <thead class="th">
+            <tr>
+            <th scope="col">姓名</th>
+            <th scope="col">部门</th>
+            <th scope="col">岗位</th>
+            <th scope="col">电脑类型</th>
+            <th scope="col">SN码</th>
+            </tr>
+        </thead>
+        {% if li %}
+            {% for l in li %} 
+                <tbody>
+                    <tr class= {{ l.class }} >
+                    <!-- <th scope="row">Active</th> -->
+                    <td>{{ l.name }}</td>
+                    <td>{{ l.department }}</td>
+                    <td>{{ l.job_position }}</td>
+                    <td>{{ l.pc_type }}</td>
+                    <td>{{ l.sn }}</td>
+                    </tr>
+                </tbody>
+            {% endfor %}
+        {% else %}
+            <p>No persons.</p>
+        {% endif %}
+    </table>  
+        <!-- <ul>
+            <li>部门</li>
+        {% for n in name %}
+            <li>{{ n.department }}</li>
+        {% endfor %}
+        </ul>
+
+        <ul>
+            <li>岗位</li>
+        {% for n in name %}
+            <li>{{ n.job_position }}</li>
+        {% endfor %}
+        </ul> -->
+
+    <!-- <br>
+
+
+
+
+
+
+
+    <form action="{% url 'assets:add' %}" method="post">
+    {% csrf_token %}
+    姓名:<br>
+    <input type="text" name="name">
+    <br>
+    部门:<br>
+    <input type="text" name="department">
+    <br>
+    岗位:<br>
+    <input type="text" name="job_position">
+    <br>
+    计算机类型:<br>
+    <input type="text" name="pc_type">
+    <br>
+    SN码:<br>
+    <input type="text" name="sn">
+    <br>
+    <input type="submit" value="Add">
+    </form>  -->
+
+
+
+{% endblock %}
