--- a/assets/templates/assets/base.html
+++ b/assets/templates/assets/base.html
@@ -24,7 +24,7 @@
                 <a class="btn btn-primary btn-lg" href="{% url 'assets:add' %}" role="button">新增</a>
                 <a class="btn btn-primary btn-lg" href="{% url 'assets:delete' %}" role="button">删除</a>
                 <a class="btn btn-primary btn-lg" href="{% url 'assets:modify' %}" role="button">更改</a>
-                <a class="btn btn-primary btn-lg" href="#" role="button">查询</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'assets:query' %}" role="button">查询</a>
                 </p>
             </div>
 
